Add support for Wi-Fi hardware crypto. (#332)
* Implemented wifi crypto for ESP32 and ESP32-S2

* Revert "Improve GPIO field name consistency (#330)"

This reverts commit 2964cc46095c7e903fa32a909181d6fb00554ddc.

* Added regs for hardware crypto on the Wi-Fi peripheral.

* Made xtask use rayon to speed up generating PACs.

* Reapply "Improve GPIO field name consistency (#330)"

This reverts commit b15296200fad89e090672d8311ffc43105ddb26b.

* Fix offset for esp32 and esp32s2.

--- a/esp32/svd/patches/esp32-wifi.yaml
+++ b/esp32/svd/patches/esp32-wifi.yaml
@@ -53,6 +53,10 @@ _add:
                 addressOffset: 0x2e0
                 access: read
 
+            MAC_TIME:
+                addressOffset: 0xc00
+                access: read
+                description: Current value of the MAC timer
             CTRL:
                 description: Exact name and meaning unknown, used for initializing the MAC
                 addressOffset: 0xcb8
@@ -149,8 +153,24 @@ WIFI:
                 registers:
                     DUMMY:
                         addressOffset: 0x0
+            CRYPTO_KEY_SLOT%s:
+                dim: 25
+                dimIncrement: 40
+                addressOffset: 0x1400
+                description: Cryptographic keys for MPDU encapsulation and decapsulation
+                registers:
+                    DUMMY:
+                        addressOffset: 0x0
+            CRYPTO_CONTROL:
+                addressOffset: 0x800
+                description: Control registers for hardware crypto
+                registers:
+                    DUMMY:
+                        addressOffset: 0x0
+
 _include:
-    - "../../../common_patches/wifi/rx.yaml"
-    - "../../../common_patches/wifi/rx_filter_masked.yaml"
-    - "../../../common_patches/wifi/tx.yaml"
-    - "../../../common_patches/wifi/mac_interrupt.yaml"
+    - "../../../common_patches/wifi/mac/rx.yaml"
+    - "../../../common_patches/wifi/mac/rx_filter_masked.yaml"
+    - "../../../common_patches/wifi/mac/tx.yaml"
+    - "../../../common_patches/wifi/mac/mac_interrupt.yaml"
+    - "../../../common_patches/wifi/mac/crypto.yaml"
