--- a/esp32s2/svd/patches/esp32s2-wifi.yaml
+++ b/esp32s2/svd/patches/esp32s2-wifi.yaml
@@ -43,6 +43,11 @@ _add:
                 dim: 5
                 dimIncrement: 0x3c
                 addressOffset: 0x1180
+            MAC_TIME:
+                addressOffset: 0x2000
+                access: read
+                description: Current value of the MAC timer
+
 WIFI:
     _add:
         _clusters:
@@ -52,7 +57,7 @@ WIFI:
                 addressOffset: 0x0
                 description: "
                     Filter banks for frame reception. Bank zero is for the BSSID and bank one for the RA.
-                    Each filter bank has registers for two interfaces.
+                    Each filter bank has registers for four interfaces.
                     "
                 registers:
                     DUMMY:
@@ -88,9 +93,25 @@ WIFI:
                 registers:
                     DUMMY:
                         addressOffset: 0x0
+            CRYPTO_KEY_SLOT%s:
+                dim: 25
+                dimIncrement: 40
+                addressOffset: 0x1400
+                description: Cryptographic keys for MPDU encapsulation and decapsulation
+                registers:
+                    DUMMY:
+                        addressOffset: 0x0
+            CRYPTO_CONTROL:
+                addressOffset: 0x800
+                description: Control registers for hardware crypto
+                registers:
+                    DUMMY:
+                        addressOffset: 0x0
+
 _include:
-    - "../../../common_patches/wifi/rx.yaml"
-    - "../../../common_patches/wifi/rx_filter_masked.yaml"
-    - "../../../common_patches/wifi/tx.yaml"
-    - "../../../common_patches/wifi/mac_interrupt.yaml"
-    - "../../../common_patches/wifi/pwr_interrupt.yaml"
+    - "../../../common_patches/wifi/mac/rx.yaml"
+    - "../../../common_patches/wifi/mac/rx_filter_masked.yaml"
+    - "../../../common_patches/wifi/mac/tx.yaml"
+    - "../../../common_patches/wifi/mac/mac_interrupt.yaml"
+    - "../../../common_patches/wifi/mac/pwr_interrupt.yaml"
+    - "../../../common_patches/wifi/mac/crypto.yaml"
