Delete I2S0 bits that don't exist

--- a/esp32c3/svd/patches/esp32c3.yaml
+++ b/esp32c3/svd/patches/esp32c3.yaml
@@ -425,10 +425,14 @@ RSA:
 
 SYSTEM:
   PERIP_CLK_EN0:
+    _delete:
+      I2S0_CLK_EN
     _modify:
       I2S1_CLK_EN:
         name: I2S0_CLK_EN
   PERIP_RST_EN0:
+    _delete:
+      I2S0_RST
     _modify:
       I2S1_RST:
         name: I2S0_RST
