--- a/esp32/svd/patches/esp32.yaml
+++ b/esp32/svd/patches/esp32.yaml
@@ -279,5 +279,30 @@ DPORT:
           description: "Set this bit to reset MAC module. Clear the bit to release MAC module."
           bitOffset: 2
           bitWidth: 1
-_include: 
+  PERIP_CLK_EN:
+    _modify:
+      I2C0_EXT0_CLK_EN:
+        name: I2C_EXT0_CLK_EN
+  PERIP_RST_EN:
+    _modify:
+      I2C0_EXT0_RST:
+        name: I2C_EXT0_RST
+  PERI_RST_EN:
+    _delete:
+      PERI_RST_EN
+    _add:
+      CRYPTO_AES_RST:
+        description: "Set the bit to reset AES module. Clear the bit to release AES module."
+        bitOffset: 0
+        bitWidth: 1
+      CRYPTO_SHA_RST:
+        description: "Set the bit to reset SHA module. Clear the bit to release HA module."
+        bitOffset: 1
+        bitWidth: 1
+      CRYPTO_RSA_RST:
+        description: "Set the bit to reset RSA module. Clear the bit to release RSA module."
+        bitOffset: 2
+        bitWidth: 1
+
+_include:
     - "esp32-wifi.yaml"
