Add upstream patches for C2 and C3
revert esp32 changes

clean up

--- a/common_patches/i2c0.yaml
+++ b/common_patches/i2c0.yaml
@@ -1,5 +1,12 @@
-COMD%s:
-  _delete: ["COMMAND"]
+_array:
+  COMD*: {}
+  
+COMD*:
+  _modify:
+    COMMAND?_DONE:
+      name: COMMAND_DONE
+
+  _delete: ["COMMAND?"]
   _add:
     OPCODE:
       description: "Opcode part of command %s."
