--- a/esp32c2/svd/patches/esp32c2.yaml
+++ b/esp32c2/svd/patches/esp32c2.yaml
@@ -1,5 +1,25 @@
 _svd: ../esp32c2.base.svd
 
+_include:
+  - "_apb_saradc.yml"
+  - "_assist_debug.yml"
+  - "_dma.yml"
+  - "_ecc.yml"
+  - "_gpio.yml"
+  - "_i2c.yml"
+  - "_interrupt.yml"
+  - "_ledc.yml"
+  - "_rtc_cntl.yml"
+  - "_sha.yml"
+  - "_spi.yml"
+  - "_timg.yml"
+  - "_xts_aes.yml"
+
+RNG:
+  _modify:
+    DATA:
+      access: read-only
+
 _modify:
   SPI?:
     groupName: SPI
@@ -29,29 +49,8 @@ I2C0:
 RTC_CNTL:
   _include: ../../../common_patches/rtc_cntl_int_strip.yaml
 
-"EFUSE,I2C0,UART0,SPI1":
+"EFUSE,I2C0,UART0":
   _include: ../../../common_patches/int_strip.yaml
-
-LEDC:
-  INT_RAW:
-    _modify:
-      OVF:
-        name: TIMER0_OVF
-  INT_ENA:
-    _modify:
-      OVF:
-        name: TIMER0_OVF
-  INT_ST:
-    _modify:
-      OVF:
-        name: TIMER0_OVF
-  INT_CLR:
-    _modify:
-      OVF:
-        name: TIMER0_OVF
-  _include:
-    - ../../../common_patches/ledc_collect.yaml
-    - ../../../common_patches/ledc_int.yaml
 
 APB_CTRL:
   PERI_BACKUP_INT_RAW:
@@ -96,119 +95,10 @@ INTERRUPT_CORE0:
     CPU_INT_PRI_*:
       name: CPU_INT_PRI%s
 
-TIMG0:
-  _include: ../../../common_patches/tim_collect.yaml
-  T0UPDATE:
-    _modify:
-      T0_UPDATE:
-        name: UPDATE
-  T0HI:
-    _modify:
-      T0_HI:
-        name: HI
-
-SPI[12]:
-  _include: ../../../common_patches/spi_w.yaml
-
-SPI2:
-  _modify:
-    _interrupts:
-      SPI_INTR_2:
-        name: SPI2
-      SPI_INTR_1:
-        name: SPI1
-  _include: ../../../common_patches/spi_dma_int_strip.yaml
-
 SYSTIMER:
   _include:
     - ../../../common_patches/int_strip.yaml
     - ../../../common_patches/systimer.yaml
-
-DMA:
-  _expand_array:
-    INT_RAW_CH%s: {}
-    INT_ENA_CH%s: {}
-    INT_CLR_CH%s: {}
-    IN_CONF0_CH%s: {}
-    IN_LINK_CH%s: {}
-    IN_DSCR_BF0_CH%s: {}
-    IN_PRI_CH%s: {}
-    IN_PERI_SEL_CH%s: {}
-    OUT_CONF0_CH%s: {}
-    OUT_CONF1_CH%s: {}
-    OUT_LINK_CH%s: {}
-    OUT_EOF_DES_ADDR_CH%s: {}
-    OUT_PRI_CH%s: {}
-    OUT_PERI_SEL_CH%s: {}
-
-  _cluster:
-    INT_CH%s:
-      dimIncrement: 0x10
-      INT_RAW_CH?:
-        name: RAW
-      INT_ST_CH?:
-        name: ST
-      INT_ENA_CH?:
-        name: ENA
-      INT_CLR_CH?:
-        name: CLR
-        _modify:
-          "*":
-            modifiedWriteValues: oneToClear
-    CH%s:
-      dimIncrement: 0xC0
-      IN_CONF0_CH?:
-        name: IN_CONF0
-      IN_CONF1_CH?:
-        name: IN_CONF1
-      INFIFO_STATUS_CH?:
-        name: INFIFO_STATUS
-      IN_POP_CH?:
-        name: IN_POP
-      IN_LINK_CH?:
-        name: IN_LINK
-      IN_STATE_CH?:
-        name: IN_STATE
-      IN_SUC_EOF_DES_ADDR_CH?:
-        name: IN_SUC_EOF_DES_ADDR
-      IN_ERR_EOF_DES_ADDR_CH?:
-        name: IN_ERR_EOF_DES_ADDR
-      IN_DSCR_CH?:
-        name: IN_DSCR
-      IN_DSCR_BF0_CH?:
-        name: IN_DSCR_BF0
-      IN_DSCR_BF1_CH?:
-        name: IN_DSCR_BF1
-      IN_PRI_CH?:
-        name: IN_PRI
-      IN_PERI_SEL_CH?:
-        name: IN_PERI_SEL
-      OUT_CONF0_CH?:
-        name: OUT_CONF0
-      OUT_CONF1_CH?:
-        name: OUT_CONF1
-      OUTFIFO_STATUS_CH?:
-        name: OUTFIFO_STATUS
-      OUT_PUSH_CH?:
-        name: OUT_PUSH
-      OUT_LINK_CH?:
-        name: OUT_LINK
-      OUT_STATE_CH?:
-        name: OUT_STATE
-      OUT_EOF_DES_ADDR_CH?:
-        name: OUT_EOF_DES_ADDR
-      OUT_EOF_BFR_DES_ADDR_CH?:
-        name: OUT_EOF_BFR_DES_ADDR
-      OUT_DSCR_CH?:
-        name: OUT_DSCR
-      OUT_DSCR_BF0_CH?:
-        name: OUT_DSCR_BF0
-      OUT_DSCR_BF1_CH?:
-        name: OUT_DSCR_BF1
-      OUT_PRI_CH?:
-        name: OUT_PRI
-      OUT_PERI_SEL_CH?:
-        name: OUT_PERI_SEL
 
 _add:
   I2C_ANA_MST:
