--- a/esp32c5/svd/patches/esp32c5.yaml
+++ b/esp32c5/svd/patches/esp32c5.yaml
@@ -208,6 +208,32 @@ EFUSE:
 
 
 GPIO:
+  _delete: "FUNC*_IN_SEL_CFG"
+
+  _add:
+    FUNC%s_IN_SEL_CFG:
+        dim: 128
+        dimIncrement: 0x4
+        description: ""
+        addressOffset: 0x2c4
+        size: 32
+        fields:
+          IN_SEL:
+            description: ""
+            bitOffset: 0
+            bitWidth: 7
+            access: read-write
+          IN_INV_SEL:
+            description: ""
+            bitOffset: 7
+            bitWidth: 1
+            access: read-write
+          SEL:
+            description: ""
+            bitOffset: 8
+            bitWidth: 1
+            access: read-write
+
   FUNC*_OUT_SEL_CFG:
     _modify:
       FUNC*_OUT_SEL:
