--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
             # RISC-V:
             { package: "esp32c2", target: "riscv32imc-unknown-none-elf" },
             { package: "esp32c3", target: "riscv32imc-unknown-none-elf" },
+            { package: "esp32c5", target: "riscv32imac-unknown-none-elf" },
             { package: "esp32c6", target: "riscv32imac-unknown-none-elf" },
             { package: "esp32h2", target: "riscv32imac-unknown-none-elf" },
             { package: "esp32p4", target: "riscv32imafc-unknown-none-elf" },
