Fix `GPIO` and `LP_IO` peripherals for ESP32-C5

--- a/esp32c5/svd/patches/esp32c5.yaml
+++ b/esp32c5/svd/patches/esp32c5.yaml
@@ -2,7 +2,9 @@ _svd: ../esp32c5.base.svd
 
 _include:
   - ../../../common_patches/plic.yaml
+  - _gpio.yml
   - _interrupt.yml
+  - _lp_io.yml
 
 AES:
   _modify:
